<?xml version="1.0" encoding="utf-8"?><!-- using constraint layout
as the design is complex,we need aligns children in a different directions either vertical or horizontal -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/_16sdp">

        <TextView
            android:id="@+id/textView3"
            style="@style/TextHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions" />

        <TextView
            android:id="@+id/textView4"
            style="@style/textBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instructions_details"
            app:fontFamily="@font/roboto" />

        <Button
            android:id="@+id/next_button"
            style="@style/greenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/next" />

    </LinearLayout>
</layout>