<?xml version="1.0" encoding="utf-8"?>
<!-- using constraint layout
as the design is complex,we need aligns children in a different directions either vertical or horizontal -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
        <variable
            name="shoeViewModel"
            type="com.udacity.shoestore.screens.shoelist.ShoeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_16sdp">

        <TextView
            android:id="@+id/company_text"
            style="@style/TextHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Company"
            app:layout_constraintBottom_toTopOf="@+id/size_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text" />

        <TextView
            android:id="@+id/name_text"
            style="@style/TextHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/company_text"
            app:layout_constraintEnd_toStartOf="@+id/name_edit_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/size_text"
            style="@style/TextHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Size"
            app:layout_constraintBottom_toTopOf="@+id/description_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_text" />

        <TextView
            android:id="@+id/description_text"
            style="@style/TextHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Note"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size_text" />

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={shoe.name}"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_text"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/company_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Company"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={shoe.company}"
            app:layout_constraintBaseline_toBaselineOf="@+id/company_text"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/size_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/Size"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@={`` +shoe.size}"
            app:layout_constraintBaseline_toBaselineOf="@+id/size_text"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/note_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="description"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@={shoe.description}"
            app:layout_constraintBaseline_toBaselineOf="@+id/description_text"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:onClick="@{()-> shoeViewModel.onCancel()}"
            android:text="cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_text" />

        <Button
            android:id="@+id/save_button"
            style="@style/greenButton"
            android:layout_width="203dp"
            android:layout_height="wrap_content"
            android:onClick="@{()-> shoeViewModel.onSave()}"
            android:text="Save"
            app:layout_constraintBaseline_toBaselineOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="save_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>